document products endpoints
