# handlers/add.go
@@ -5,6 +5,11 @@ import (
 	"net/http"
 )
 
+// @Summary		Create Product
+// @Description	Add a new product to the data store
+// @Tags			products
+// @Success		200	{object}	data.Product	"The newly created product"
+// @Router			/ [post]
 func (p *Products) AddProduct(rw http.ResponseWriter, r *http.Request) {
 	prod := r.Context().Value(KeyProduct{}).(*data.Product)
 
